kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-concert-app
  namespace: ns-palonso
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-concert-app
  template:
    metadata:
      labels:
        app: my-concert-app
    spec:
      containers:
      - name: my-concert-app
        image: palonsoacr.azurecr.io/my-concert-app:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
