kubernetes/services.yml
apiVersion: v1
kind: Service
metadata:
  name: my-concert-app-service
  namespace: ns-palonso
spec:
  type: LoadBalancer
  loadBalancerIP: 85.210.88.184
  selector:
    app: my-concert-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
