kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-concert-app-ingress
  namespace: ns-palonso
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 85.210.88.184
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: my-concert-app-service
            port:
              number: 80
